# PolymorphicCollection

./: .gitignore  ArrayOfPartitions.h  CMakeLists.txt  Concepts.h  Partition.h  PolymorphicCollection.h  PolymorphicVectorReference.h  README.md  RuntimeTupleUtils.h  TupleHelpers.h  TupleOfVectors.h  TypeUtils.h  VectorVariant.h  main.cpp
